Fixed overflowing bug with aspect ratio

--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -2,7 +2,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    aspect-ratio: 1 / 1.15;
     color: var(--primary-font-color);
 }
 
