--- a/src/pages/product-page/productpage.css
+++ b/src/pages/product-page/productpage.css
@@ -2,7 +2,7 @@
 .productpage {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 100dvw;
 }
 
 /* Content Display */
